--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -1,15 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
   <title>간단한 지도 표시하기</title>
-  <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=ii8vu2nh4a"></script>
   <link rel="stylesheet" href="/stylesheets/style.css" />
+  <link rel="stylesheet" href="/stylesheets/upload.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
-  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e13c8eb90eb4c1e2643c380bd94f5646&libraries=services"></script>
-  <link rel="stylesheet" href="/stylesheets/upload.css" />
+  <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=ii8vu2nh4a"></script>
+  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e13c8eb90eb4c1e2643c380bd94f5646&libraries=services,drawing"></script>
 </head>
 
 <body>
@@ -19,13 +21,50 @@
   <button><a href="/list/<%= list._id %>/location">장소 추가</a></button>
   <h2></h2>
   <p>
-    <% list.location.forEach(function(loc,index) { %>
-      <%= index + 1 %>.<%= loc.title %> - <%= loc.address %> :집합시간 : <%= loc.time %>, 메모 :  <%= loc.memo %>, <br>
+    <% list.location.forEach(function(loc, index) { %>
+      <%= index + 1 %>.<%= loc.title %> - <%= loc.address %> : 집합시간 : <%= loc.time %>, 메모 : <%= loc.memo %><br>
     <% }); %>
   </p>
 
-  <div id="map" style="width:100%;height:100vh;"></div>
+  <div id="naverMap" style="width:100%;height:100vh;"></div>
+
+  <script type="text/javascript">
+    // 네이버 지도 초기화
+    var naverMap = new naver.maps.Map('naverMap', {
+        center: new naver.maps.LatLng(37.5665, 126.9780),
+        zoom: 10
+    });
+
+    // 카카오 지도 초기화 (네이버 지도 위에 오버레이)
+    var kakaoMapContainer = document.createElement('div');
+    kakaoMapContainer.style.width = '100%';
+    kakaoMapContainer.style.height = '100vh';
+    kakaoMapContainer.style.position = 'absolute';
+    kakaoMapContainer.style.top = '0';
+    kakaoMapContainer.style.left = '0';
+    document.getElementById('naverMap').appendChild(kakaoMapContainer);
+
+    var kakaoMap = new kakao.maps.Map(kakaoMapContainer, {
+        center: new kakao.maps.LatLng(37.5665, 126.9780),
+        level: 3
+    });
+
+    // 경로 데이터 불러오기 및 카카오 지도에 표시
+    $.get('/getPath', function(data) {
+        var path = data.map(coord => new kakao.maps.LatLng(coord.lat, coord.lng));
+        var polyline = new kakao.maps.Polyline({
+            path: path,
+            strokeWeight: 5,
+            strokeColor: '#FFAE00',
+            strokeOpacity: 0.7,
+            strokeStyle: 'solid'
+        });
+
+        polyline.setMap(kakaoMap);
+    });
+  </script>
 
   <script type="text/javascript" src="/javascripts/MarkerClustering.js"></script>
   <script type="text/javascript" src="/javascripts/main.js"></script>
 </body>
+</html>
