--- a/views/location.ejs
+++ b/views/location.ejs
@@ -3,27 +3,115 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Location Page</title>
     <link rel="stylesheet" href="/stylesheets/upload.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e13c8eb90eb4c1e2643c380bd94f5646&libraries=services"></script>
+    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=ii8vu2nh4a"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e13c8eb90eb4c1e2643c380bd94f5646&libraries=services,drawing"></script>
 </head>
 <body>
     <h2>위치 추가하기</h2>
-    <h3></h3>
-    <div id="map" style="width: 100%; height:100vh;"></div>
+    <div id="naverMap" style="width: 100%; height:100vh;"></div>
     <div id="menu_wrap">
         <form onsubmit="searchPlaces(); return false;">
             키워드: <input type="text" value="강남" id="keyword" size="15">
             <button type="submit">검색</button>
         </form>
+        <button onclick="createRunningCourse()">러닝코스 생성</button>
     </div>
     <div id="placesList"></div>
-    <script type="text/javascript" src="/javascripts/upload.js"></script>
+    <script type="text/javascript">
+        // 네이버 지도 초기화
+        var naverMap = new naver.maps.Map('naverMap', {
+            center: new naver.maps.LatLng(37.5665, 126.9780),
+            zoom: 10
+        });
+
+        // 카카오 지도 초기화 (네이버 지도 위에 오버레이)
+        var kakaoMapContainer = document.createElement('div');
+        kakaoMapContainer.style.width = '100%';
+        kakaoMapContainer.style.height = '100vh';
+        kakaoMapContainer.style.position = 'absolute';
+        kakaoMapContainer.style.top = '0';
+        kakaoMapContainer.style.left = '0';
+        document.getElementById('naverMap').appendChild(kakaoMapContainer);
+
+        var kakaoMap = new kakao.maps.Map(kakaoMapContainer, {
+            center: new kakao.maps.LatLng(37.5665, 126.9780),
+            level: 3
+        });
+
+        var selectedMarkers = [];
+
+        function searchPlaces() {
+            var keyword = document.getElementById('keyword').value;
+            var places = new kakao.maps.services.Places();
+
+            places.keywordSearch(keyword, function(data, status) {
+                if (status === kakao.maps.services.Status.OK) {
+                    displayPlaces(data);
+                } else {
+                    alert('검색 결과가 없습니다.');
+                }
+            });
+        }
+
+        function displayPlaces(places) {
+            var bounds = new kakao.maps.LatLngBounds();
+
+            for (var i = 0; i < places.length; i++) {
+                var placePosition = new kakao.maps.LatLng(places[i].y, places[i].x);
+                var marker = addMarker(placePosition);
+                bounds.extend(placePosition);
+            }
+
+            kakaoMap.setBounds(bounds);
+        }
+
+        function addMarker(position) {
+            var marker = new kakao.maps.Marker({
+                position: position
+            });
+
+            marker.setMap(kakaoMap);
+
+            kakao.maps.event.addListener(marker, 'click', function() {
+                if (selectedMarkers.includes(marker)) {
+                    selectedMarkers = selectedMarkers.filter(m => m !== marker);
+                    marker.setImage(null);
+                } else {
+                    selectedMarkers.push(marker);
+                    marker.setImage(new kakao.maps.MarkerImage('http://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markerStar.png'));
+                }
+            });
+
+            return marker;
+        }
+
+        function createRunningCourse() {
+            if (selectedMarkers.length < 2) {
+                alert('두 개 이상의 마커를 선택해야 합니다.');
+                return;
+            }
+
+            var path = selectedMarkers.map(marker => marker.getPosition());
+            var polyline = new kakao.maps.Polyline({
+                path: path,
+                strokeWeight: 5,
+                strokeColor: '#FFAE00',
+                strokeOpacity: 0.7,
+                strokeStyle: 'solid'
+            });
+
+            polyline.setMap(kakaoMap);
+
+            var pathData = path.map(latlng => ({ lat: latlng.getLat(), lng: latlng.getLng() }));
+            $.post('/savePath', { path: pathData }, function(response) {
+                console.log('Path saved:', response);
+            });
+        }
+    </script>
 </body>
 </html>
-
-<div>
-
