--- a/views/location.ejs
+++ b/views/location.ejs
@@ -1,27 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/stylesheets/upload.css">
+    <title>위치 추가하기</title>
+    <link href="/stylesheets/main.css" rel="stylesheet" />
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e13c8eb90eb4c1e2643c380bd94f5646&libraries=services"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e13c8eb90eb4c1e2643c380bd94f5646&libraries=services"></script>
-</head>
-<body>
-    <h2>위치 추가하기</h2>
-    <h3></h3>
-    <div id="map" style="width: 100%; height:100vh;"></div>
-    <div id="menu_wrap">
-        <form onsubmit="searchPlaces(); return false;">
-            키워드: <input type="text" value="강남" id="keyword" size="15">
-            <button type="submit">검색</button>
-        </form>
+  </head>
+  <body>
+    <div class="container">
+      <!-- 상단바 -->
+      <div class="nav">
+        <div class="nav-title" onclick="location.href='/'">
+          <img src="/images/running_icon.png" alt="메인아이콘" />
+          <p>빽러닝</p>
+        </div>
+        <div class="nav-btns">
+          <button onclick="location.href='/'">러닝코스</button>
+          <button onclick="location.href='/talk'">러닝 톡</button>
+        </div>
+      </div>
+
+      <div class="content">
+        
+        <div class="box">
+          <p class="location-title">📍 위치 추가하기</p>
+          <div id="menu_wrap">
+            <form class="location-form" onsubmit="searchPlaces(); return false;">
+              <input type="text" placeholder="장소를 입력해주세요." id="keyword" />
+              <button type="submit">🔍</button>
+            </form>
+            <div id="map"></div>
+            <div id="placesList"></div>
+          </div>
+        </div>
+        
+      </div>
     </div>
-    <div id="placesList"></div>
     <script type="text/javascript" src="/javascripts/upload.js"></script>
-</body>
+  </body>
 </html>
-<div>
+
