--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>간단한 지도 표시하기</title>
-    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=ii8vu2nh4a"></script>
+    <script
+      type="text/javascript"
+      src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=ii8vu2nh4a"></script>
     <link rel="stylesheet" href="/stylesheets/main.css" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"></script>
   </head>
@@ -29,10 +32,7 @@
       <div class="content">
         <div class="box course-detail-box">
           <div class="course-detail-title-box">
-            <img
-              class="course-main-icon"
-              src="/images/course_icon.png"
-              alt="코스아이콘" />
+            <img class="course-main-icon" src="/images/course_icon.png" alt="코스아이콘" />
             <p class="course-detail-title"><%= list.title %></p>
           </div>
           <p class="course-detail-description"><%= list.content %></p>
@@ -41,25 +41,26 @@
         <div id="map"></div>
 
         <!-- 설명 요소 하나 -->
+        <% list.location.forEach(function(loc,index) { %>
         <div class="box">
-          <% list.location.forEach(function(loc,index) { %>
           <div class="course-detail-location-title-div">
             <div class="course-detail-location-index-div">
               <div class="course-detail-location-index"><p><%= index + 1 %></p></div>
-              <p class="course-detail-location-time"> <%= loc.time %> </p>
+              <p class="course-detail-location-time"><%= loc.time %></p>
             </div>
             <div class="course-detail-location-title"><p><%= loc.title %></p></div>
           </div>
           <p class="course-detail-location-info">🚩 <%= loc.address %></p>
           <p>📝 메모 : <%= loc.memo %></p>
-          <% }); %>
         </div>
+        <% }); %>
         <!-- 버튼 -->
-        <button class="btn" onclick="location.href='/list/<%= list._id %>/location'">➕ 장소 추가</button>
+        <button class="btn" onclick="location.href='/list/<%= list._id %>/location'">
+          ➕ 장소 추가
+        </button>
       </div>
     </div>
     <script type="text/javascript" src="/javascripts/MarkerClustering.js"></script>
     <script type="text/javascript" src="/javascripts/main.js"></script>
   </body>
 </html>
-
