[feat] 페이지 라우터 추가

--- a/design/main.css
+++ b/design/main.css
@@ -360,6 +360,7 @@ select:focus {
 
 .course-detail-title-box {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   padding-bottom: 5px;
   border-bottom: 1px solid var(--Gray);
