--- a/views/writeTalk.ejs
+++ b/views/writeTalk.ejs
@@ -23,13 +23,13 @@
 
       <div class="content">
         <div class="box">
-          <p class="write-title">새 러닝코스 작성</p>
-          <form class="write-box" action="/write" method="post">
+          <p class="write-title">새 러닝톡 작성</p>
+          <form class="write-box" action="/writeTalk" method="post">
             <p>👉 제목</p>
             <input type="text" placeholder="제목을 입력해주세요." name="title" />
 
-            <p>🤔 상세설명</p>
-            <input type="text" placeholder="러닝코스에 대해 소개해주세요." name="content"/>
+            <p>🤔 내용</p>
+            <input type="text" placeholder="러닝톡의 내용을 자유롭게 적어주세요." name="content" />
 
             <button class="btn" type="submit">작성하기</button>
           </form>
