[feat] isLogin 조건을 위로 뺌(list, talk, mypage)

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,3 +1,5 @@
+<% const isLogin = true %>
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -23,7 +25,7 @@
       </div>
 
       <!-- 로그인 되었는지 확인하는 조건임!! -->
-      <% if (true) { %>
+      <% if (isLogin) { %>
 
       <!-- 내용 -->
       <div class="content">
