--- a/views/talk.ejs
+++ b/views/talk.ejs
@@ -1,3 +1,5 @@
+<% const isLogin = true %>
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -22,7 +24,7 @@
       </div>
 
       <!-- 로그인 되었는지 확인하는 조건임!! -->
-      <% if (true) {%>
+      <% if (isLogin) {%>
       
       <!-- 내용 -->
       <div class="content">
