--- a/views/join.ejs
+++ b/views/join.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>회원가입</title>
-    <link href="stylesheets/main.css" rel="stylesheet" />
+    <link href="/stylesheets/main.css" rel="stylesheet" />
   </head>
   <body>
     <div class="container">
@@ -17,7 +17,7 @@
         <div class="nav-btns">
           <button onclick="location.href='/'">러닝코스</button>
           <button onclick="location.href='/talk'">러닝 톡</button>
-          <button onclick="location.href='/mypage'">내 프로필</button>
+          <button onclick="location.href='/auth/mypage'">내 프로필</button>
         </div>
       </div>
 
@@ -57,7 +57,7 @@
           </form>
         </div>
         <!-- 로그인 하러가기 -->
-        <button class="btn w-100" onclick="location.href='/mypage'">
+        <button class="btn w-100" onclick="location.href='/auth/login'">
           🤔 이미 계정이 있으신가요?
         </button>
 
