--- a/views/writeTalk.ejs
+++ b/views/writeTalk.ejs
@@ -16,8 +16,8 @@
         </div>
         <div class="nav-btns">
           <button onclick="location.href='/'">러닝코스</button>
-          <button onclick="location.href='/talk'">러닝 톡</button>
-          <button onclick="location.href='/mypage'">내 프로필</button>
+          <button onclick="location.href='/post/talk'">러닝 톡</button>
+          <button onclick="location.href='/auth/mypage'">내 프로필</button>
         </div>
       </div>
 
