--- a/views/writeTalk.ejs
+++ b/views/writeTalk.ejs
@@ -20,11 +20,10 @@
           <button onclick="location.href='/auth/mypage'">내 프로필</button>
         </div>
       </div>
-
       <div class="content">
         <div class="box">
           <p class="write-title">새 러닝톡 작성</p>
-          <form class="write-box" action="/writeTalk" method="post">
+          <form class="write-box" action="post/talk" method="post">
             <p>👉 제목</p>
             <input type="text" placeholder="제목을 입력해주세요." name="title" />
 
