--- a/views/talk.ejs
+++ b/views/talk.ejs
@@ -21,42 +21,42 @@
         </div>
       </div>
 
-      <!-- 로그인 되었는지 확인하는 조건 -->
+      <!-- 로그인 여부 확인 -->
       <% if (user) { %>
-      <!-- 로그인된 상태 -->
       <div class="content">
         <!-- 톡 추가 버튼 -->
         <button class="btn mb-10" onclick="location.href='/writeTalk'">➕ 러닝톡 추가하기</button>
 
-        <!-- 톡 하나 -->
-        <div class="box">
-          <div class="talk-title-div">
-            <div class="talk-title-info">
-              <p class="talk-title">게시물 타이틀</p>
-              <p class="talk-author">✍️ 작성자</p>
+        <!-- 게시물 리스트 -->
+          <% write.forEach(function(item) { %>
+            <div class="box">
+              <div class="talk-title-div">
+                <div class="talk-title-info">
+                  <p class="talk-title"><%= item.title %></p>
+                  <p class="talk-author">✍️<%= item.userId.nick %> </p>
+                </div>
+              </div>
+              <div class="talk-content-div">
+                <p><%= item.content %></p>
+              </div>
+              <div class="talk-comment-div">
+                <!-- 댓글 입력창 -->
+                <div class="talk-comment-input-div">
+                  <input
+                    type="text"
+                    action="/post/comment"
+                    id="commentInput"
+                    placeholder="댓글을 입력하세요" />
+                  <button id="commentSubmitBtn" class="btn">댓글 달기</button>
+                </div>
+                <!-- 댓글 하나 -->
+                <div class="talk-comment">
+                  <p class="talk-comment-author">😀 작성자</p>
+                  <p>댓글 내용</p>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="talk-content-div">
-            <p>게시글 내용</p>
-          </div>
-          <div class="talk-comment-div">
-            <!-- 댓글 입력창 -->
-            <div class="talk-comment-input-div">
-              <input
-                type="text"
-                action="/post/comment"
-                id="commentInput"
-                placeholder="댓글을 입력하세요" />
-              <button id="commentSubmitBtn" class="btn">댓글 달기</button>
-            </div>
-
-            <!-- 댓글 하나 -->
-            <div class="talk-comment">
-              <p class="talk-comment-author">😀 작성자</p>
-              <p>댓글 내용</p>
-            </div>
-          </div>
-        </div>
+          <% }); %>
       </div>
       <% } else { %>
       <!-- 비로그인 상태 -->
