--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -27,7 +27,7 @@
           <!-- 로그인 상태 -->
           <section class="box">
             <p class="mypage-welcome-title">🏃 안녕하세요! <span class="mypage-username"><%= user.nick %></span>님.</p>
-            <p class="mb-10">현재 찜한 러닝코스는 <span class="mypage-current-like"></span>개에요.</p>
+            <p class="mb-10">현재 찜한 러닝코스를 확인해보세요.</p>
             <a class="btn w-100" href='/auth/logout'>로그아웃</a>
           </section>
 
