[fix] 회원가입 -> 로그인 이동 오류 수정

--- a/views/join.ejs
+++ b/views/join.ejs
@@ -57,7 +57,7 @@
           </form>
         </div>
         <!-- 로그인 하러가기 -->
-        <button class="btn w-100" onclick="location.href='/auth/login'">
+        <button class="btn w-100" onclick="location.href='/auth/mypage'">
           🤔 이미 계정이 있으신가요?
         </button>
 
