--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -49,6 +49,11 @@
 
         <div id="map"></div>
 
+        <!-- 버튼 -->
+        <button class="btn mb-10" onclick="location.href='/list/<%= list._id %>/location'">
+          ➕ 장소 추가
+        </button>
+
         <!-- 설명 요소 하나 -->
         <% list.location.forEach(function(loc,index) { %>
         <div class="box">
@@ -63,10 +68,6 @@
           <p>📝 메모 : <%= loc.memo %></p>
         </div>
         <% }); %>
-        <!-- 버튼 -->
-        <button class="btn" onclick="location.href='/list/<%= list._id %>/location'">
-          ➕ 장소 추가
-        </button>
       </div>
     </div>
     <script type="text/javascript" src="/javascripts/MarkerClustering.js"></script>
