[feat] 참가하기 아이콘 추가

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -524,12 +524,13 @@ select:focus {
 }
 
 .course-detail-like {
-  background: var(--Purple);
-  padding: 5px 5px;
-  border-radius: 10px;
-  color: var(--White);
+  width: 25px;
   font-size: small;
   cursor: pointer;
+}
+
+.course-detail-like > img {
+  width: 100%;
 }
 
 .talk-content-div {
